# plasma

./: CONTRIBUTING.md  README.md
dissectors/: README.md  pyproject.toml
dissectors/edf_plasma_dissectors/: __init__.py
dissectors/edf_plasma_dissectors/android/mvt/: appops.py  files.py  packages.py  packages_perms.py  (+2 more)
dissectors/edf_plasma_dissectors/darwin/: __init__.py  fslist.py  helper.py  install_history.py  install_log.py  knowledgec.py  launch.py  safari_history.py  startup.py  system_log.py  users.py  version.py
dissectors/edf_plasma_dissectors/elf/: __init__.py  helper.py
dissectors/edf_plasma_dissectors/generic/: __init__.py  artifact_info.py  chromium.py  client_info.py  firefox.py  history.py  hosts.py  ssh_pub_key.py
dissectors/edf_plasma_dissectors/helper/: sqlite.py
dissectors/edf_plasma_dissectors/linux/: __init__.py  auditd.py  authlog.py  crontab.py  dpkg.py  fslist.py  fstab.py  group.py  history.py  hosts.py  logrotate.py  netstat.py  passwd.py  resolv.py  shadow.py  udev_rules.py  wtmp_utmp.py  xdg_autostart.py
dissectors/edf_plasma_dissectors/memdump/: __init__.py  helper.py
dissectors/edf_plasma_dissectors/pcap/: __init__.py  dns_answers.py  dns_queries.py  http_requests.py  protocol_stats.py  tcp_conversations.py  tls_certificate.py  tls_client_hello.py  tls_server_hello.py  udp_conversations.py
dissectors/edf_plasma_dissectors/pe/: __init__.py  helper.py  resource.py
dissectors/edf_plasma_dissectors/windows/: __init__.py  appx.py  evtx.py  iis.py  jumplist.py  lnk.py  mft.py  mssql.py  netstat.py  powershell.py  prefetch.py  registry.py  srudb.py  task.py  usnj.py  webcache.py  wmi.py  zone_identifier.py
(+153 files in other folders)
